# lib/db/src/schema/profiles.ts
@@ -5,6 +5,9 @@ import { z } from "zod/v4";
 export const profilesTable = pgTable("profiles", {
   id: text("id").primaryKey(),
   email: text("email").notNull(),
+  first_name: text("first_name"),
+  last_name: text("last_name"),
+  phone: text("phone"),
   full_name: text("full_name"),
   company_name: text("company_name"),
   nif: text("nif"),
